// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<blogGrid /> should match snapshot 1`] = `
<div
  className="blog__background"
>
  <div
    className="container"
  >
    <div
      className="blog__grid"
    >
      <Link
        key="5 Tips to get things done0"
        replace={false}
        to={
          Object {
            "pathname": "/blog/5-Tips-to-get-things-done",
            "state": Object {
              "post": Object {
                "byline": "yesyesyeys",
                "img": "http://via.placeholder.com/300x300",
                "text": "sf sdfg dfasd df dg asdf sdf adsf sadf yea oia the ruler is bakc ofi course is i sfsf aoosd sgodf sfoeg wefodfguonfls sdfsd fsd sgosfsd sdfpsdf sdgxfogfdng  sdfosf sgosf sdfosg sdosf sgosdf sdfosdg sfosdf sd",
                "title": "5 Tips to get things done",
              },
            },
          }
        }
      >
        <blogPanel
          post={
            Object {
              "byline": "yesyesyeys",
              "img": "http://via.placeholder.com/300x300",
              "text": "sf sdfg dfasd df dg asdf sdf adsf sadf yea oia the ruler is bakc ofi course is i sfsf aoosd sgodf sfoeg wefodfguonfls sdfsd fsd sgosfsd sdfpsdf sdgxfogfdng  sdfosf sgosf sdfosg sdosf sgosdf sdfosdg sfosdf sd",
              "title": "5 Tips to get things done",
            }
          }
        />
      </Link>
      <Link
        key="Pass the interview with these answers1"
        replace={false}
        to={
          Object {
            "pathname": "/blog/Pass-the-interview-with-these-answers",
            "state": Object {
              "post": Object {
                "byline": "yesyesyeys",
                "img": "http://via.placeholder.com/300x300",
                "text": "sf sdfg dfasd df dg asdf sdf adsf sadf",
                "title": "Pass the interview with these answers",
              },
            },
          }
        }
      >
        <blogPanel
          post={
            Object {
              "byline": "yesyesyeys",
              "img": "http://via.placeholder.com/300x300",
              "text": "sf sdfg dfasd df dg asdf sdf adsf sadf",
              "title": "Pass the interview with these answers",
            }
          }
        />
      </Link>
      <Link
        key="Top 10 most common questions2"
        replace={false}
        to={
          Object {
            "pathname": "/blog/Top-10-most-common-questions",
            "state": Object {
              "post": Object {
                "byline": "yesyesyeys",
                "img": "http://via.placeholder.com/300x300",
                "text": "sf sdfg dfasd df dg asdf sdf adsf sadf",
                "title": "Top 10 most common questions",
              },
            },
          }
        }
      >
        <blogPanel
          post={
            Object {
              "byline": "yesyesyeys",
              "img": "http://via.placeholder.com/300x300",
              "text": "sf sdfg dfasd df dg asdf sdf adsf sadf",
              "title": "Top 10 most common questions",
            }
          }
        />
      </Link>
      <Link
        key="What Google and employers are looking for3"
        replace={false}
        to={
          Object {
            "pathname": "/blog/What-Google-and-employers-are-looking-for",
            "state": Object {
              "post": Object {
                "byline": "yesyesyeys",
                "img": "http://via.placeholder.com/300x300",
                "text": "sf sdfg dfasd df dg asdf sdf adsf sadf",
                "title": "What Google and employers are looking for",
              },
            },
          }
        }
      >
        <blogPanel
          post={
            Object {
              "byline": "yesyesyeys",
              "img": "http://via.placeholder.com/300x300",
              "text": "sf sdfg dfasd df dg asdf sdf adsf sadf",
              "title": "What Google and employers are looking for",
            }
          }
        />
      </Link>
    </div>
  </div>
</div>
`;

exports[`<blogGrid /> should render error message if error 1`] = `
<div
  className="blog__background"
>
  <div
    className="container"
  >
    <h1
      className="blog__grid__error"
    >
      Sorry, an error has occured
    </h1>
  </div>
</div>
`;

exports[`<blogGrid /> should render loading while waiting for posts 1`] = `
<div
  className="blog__background"
>
  <div
    className="container"
  >
    <loader />
  </div>
</div>
`;
